Fixed CSS distortion for EVP2
git-svn-id: https://plugins.svn.wordpress.org/wp-evs/trunk@919459 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/evs.css
+++ b/assets/evs.css
@@ -6,8 +6,12 @@
 [data-role="evp-splittest"] embed,
 [data-role="evp-playlist"] video,
 [data-role="evp-playlist"] object
-[data-role="evp-playlist"] embed { max-width: none !important; max-width: none; width: inherit; height: inherit; }
+[data-role="evp-playlist"] embed,
+.evp-video-wrap video,
+.evp-video-wrap object,
+.evp-video-wrap embed { max-width: none !important; max-width: none; width: inherit; height: inherit; }
 
 [data-role="evp-video"] img,
 [data-role="evp-splittest"] img,
-[data-role="evp-playlist"] img { max-width: none !important; max-width: none; width: inherit; height: inherit; }
+[data-role="evp-playlist"] img,
+.evp-video-wrap img { max-width: none !important; max-width: none; width: inherit; height: inherit; }
